--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
 
                 <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
                     <a
-                        class="px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200 rounded-lg dark-mode:bg-gray-700 dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        class="px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200 rounded-lg dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 dark:text-gray-100 focus:outline-none focus:shadow-outline"
                         href="about.html"
                     >
                         Blog
                     </a>
                     <a
-                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                         href="#"
                     >
                         Portfolio
                     </a>
                     <a
-                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                         href="#"
                     >
                         About
                     </a>
                     <a
-                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                        class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                         href="contact.html"
                     >
                         Contact
@@ -103,7 +103,7 @@
                     <div @click.away="open = false" class="relative" x-data="{ open: false }">
                         <button
                             @click="open = !open"
-                            class="flex flex-row items-center w-full px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:focus:bg-gray-600 dark-mode:hover:bg-gray-600 md:w-auto md:inline md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                            class="flex flex-row items-center w-full px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg dark:bg-transparent dark:focus:text-white dark:hover:text-white dark:focus:bg-gray-600 dark:hover:bg-gray-600 md:w-auto md:inline md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                         >
                             <span>My Account</span>
                             <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1">
@@ -120,21 +120,21 @@
                             x-transition:leave-end="transform opacity-0 scale-95"
                             class="absolute right-0 w-full mt-2 origin-top-right rounded-md shadow-lg md:w-48"
                         >
-                            <div class="px-2 py-2 bg-white rounded-md shadow dark-mode:bg-gray-800">
+                            <div class="px-2 py-2 bg-white rounded-md shadow dark:bg-gray-800">
                                 <a
-                                    class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                                    class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:text-gray-100 dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                                     href="#"
                                 >
                                     Link #1
                                 </a>
                                 <a
-                                    class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                                    class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:text-gray-100 dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                                     href="#"
                                 >
                                     Link #2
                                 </a>
                                 <a
-                                    class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark-mode:bg-transparent dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
+                                    class="block px-4 py-2 mt-2 text-sm font-semibold bg-transparent dark:text-gray-100 rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
                                     href="#"
                                 >
                                     Link #3
@@ -551,7 +551,9 @@
                             <div class="">
                                 <div class="prod-cart-header">
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-1.jpg" alt="" /></a>
+                                        <a href="#" class="relative"> <img class="w-full" src="images/product-1.jpg" alt="" />
+                                        <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span>
+                                    </a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -569,7 +571,8 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-2.jpg" alt="" /></a>
+                                        <a href="#" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
+                                            <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -606,7 +609,8 @@
                                     </div>
 
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-4.jpg" alt="" /></a>
+                                        <a href="#" class="relative"> <img class="w-full" src="images/product-4.jpg" alt="" />
+                                         <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
@@ -642,7 +646,8 @@
                                         </div>
                                     </div>
                                     <div class="prod-single-cart">
-                                        <a href="#" class=""> <img class="w-full" src="images/product-2.jpg" alt="" /></a>
+                                        <a href="#" class="relative"> <img class="w-full" src="images/product-2.jpg" alt="" />
+                                            <span class="bg-red-500 text-white absolute px-3 py-0 rounded top-0 left-0">10%</span></a>
                                         <div class="px-5 pt-4 pb-3 prod-cart-content">
                                             <a href="#" class="prod-cart-heading font-rubic">Dutchman's Breeches</a>
                                             <p class="prod-cart-price font-rubic">$100.00 <span class="prod-price-throught font-rubic">$120.00</span></p>
