--- a/login.html
+++ b/login.html
@@ -165,7 +165,7 @@
                                         Username
                                     </label>
                                     <input
-                                        class="w-full px-3 py-2 text-sm leading-tight text-gray-700 border rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                        class="w-full px-3 py-2 text-sm dark:bg-gray-800 dark:border-gray-600 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500"
                                         id="username"
                                         type="text"
                                         placeholder="Username"
@@ -176,7 +176,7 @@
                                         Password
                                     </label>
                                     <input
-                                        class="w-full px-3 py-2 mb-3 text-sm leading-tight text-gray-700 border border-red-500 rounded shadow appearance-none focus:outline-none focus:shadow-outline"
+                                        class="w-full px-3 py-2 text-sm dark:bg-gray-800 dark:border-gray-600 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:border-indigo-500 focus:ring-1 focus:ring-indigo-500"
                                         id="password"
                                         type="password"
                                         placeholder="******************"
