--- a/checkout.html
+++ b/checkout.html
@@ -23,7 +23,7 @@
         </style>
     </head>
 
-    <body class="bg-white text-gray-800 dark:text-gray-100 dark:bg-gray-800">
+    <body class="body">
         <div class="w-full text-gray-700 bg-gray-100 fixed top-0 z-40">
             <div x-data="{ open: false }" class="py-2 flex flex-col max-w-screen-xl mx-auto md:items-center md:justify-between md:flex-row xl:px-0 lg:px-10 md:px-5 px-5">
                 <div class="p-4 flex flex-row items-center justify-between">
