--- a/login.html
+++ b/login.html
@@ -23,7 +23,7 @@
         </style>
     </head>
 
-    <body class="bg-white text-gray-800 dark:text-gray-100 dark:bg-gray-800">
+    <body class="body">
         <div class="w-full text-gray-700 bg-gray-100 fixed top-0 z-40">
             <div x-data="{ open: false }" class="py-2 flex flex-col max-w-screen-xl mx-auto md:items-center md:justify-between md:flex-row xl:px-0 lg:px-10 md:px-5 px-5">
                 <div class="p-4 flex flex-row items-center justify-between">
@@ -150,15 +150,15 @@
             <div class="container mx-auto">
                 <div class="flex justify-center px-6 my-12">
                     <!-- Row -->
-                    <div class="w-full xl:w-3/4 lg:w-11/12 flex">
+                    <div class="w-full xl:w-3/4 lg:w-11/12 flex shadow-lg">
                         <!-- Col -->
                         <div class="w-full h-auto bg-gray-400 hidden lg:block lg:w-1/2 bg-cover rounded-l-lg" style="background-image: url('https://source.unsplash.com/K4mSJ7kc0As/600x800');"></div>
                         <!-- Col -->
-                        <div class="w-full lg:w-1/2 bg-white p-5 rounded-lg lg:rounded-l-none">
+                        <div class="w-full lg:w-1/2 bg-white dark:bg-gray-800 p-5 rounded-lg lg:rounded-l-none border border-gray-50 dark:border-gray-600">
                             <h3 class="pt-4 text-2xl text-center">Welcome Back!</h3>
-                            <form class="xl:px-8 lg:px-8 md:px-8 pt-6 pb-8 mb-4 bg-white rounded">
+                            <form class="xl:px-8 lg:px-8 md:px-8 pt-6 pb-8 mb-4 rounded">
                                 <div class="mb-4">
-                                    <label class="block mb-2 text-sm font-bold text-gray-700" for="username">
+                                    <label class="block mb-2 text-sm font-bold text-gray-700 dark:text-gray-100" for="username">
                                         Username
                                     </label>
                                     <input
@@ -169,7 +169,7 @@
                                     />
                                 </div>
                                 <div class="mb-4">
-                                    <label class="block mb-2 text-sm font-bold text-gray-700" for="password">
+                                    <label class="block mb-2 text-sm font-bold text-gray-700 dark:text-gray-100" for="password">
                                         Password
                                     </label>
                                     <input
@@ -191,7 +191,7 @@
                                         Sign In
                                     </button>
                                 </div>
-                                <hr class="mb-6 border-t" />
+                                <hr class="mb-6 border-t border-gray-50 dark:border-gray-600" />
                                 <div class="text-center">
                                     <a class="inline-block text-sm text-blue-500 align-baseline hover:text-blue-800" href="register.html">
                                         Create an Account!
