--- a/single-product-.html
+++ b/single-product-.html
@@ -39,11 +39,11 @@
         </style>
     </head>
 
-    <body class="bg-white text-gray-800 dark:text-gray-100 dark:bg-gray-800">
+    <body class="body">
         <div class="w-full text-gray-700 bg-gray-100 fixed top-0 z-40">
             <div x-data="{ open: false }" class="py-2 flex flex-col max-w-screen-xl mx-auto md:items-center md:justify-between md:flex-row xl:px-0 lg:px-10 md:px-5 px-5">
                 <div class="p-4 flex flex-row items-center justify-between">
-                    <a href="index.html" class="text-lg font-semibold tracking-widest text-gray-900 uppercase h-auto w-20 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
+                    <a href="#" class="text-lg font-semibold tracking-widest text-gray-900 uppercase h-auto w-20 rounded-lg dark:text-white focus:outline-none focus:shadow-outline">
                         <h1 class="text-gray-800 font-rubic dark:text-gray-800">Logo</h1>
                     </a>
                     <div class="md:ml-1 lg:ml-36 xl:ml-56">
@@ -94,7 +94,7 @@
                 <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow pb-4 md:pb-0 hidden md:flex md:justify-end md:flex-row">
                     <a
                         class="px-4 py-2 mt-2 text-sm font-semibold text-gray-900 bg-gray-200 rounded-lg dark:bg-gray-700 dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 focus:bg-gray-200 dark:text-gray-100 focus:outline-none focus:shadow-outline"
-                        href="about.html"
+                        href="#"
                     >
                         Blog
                     </a>
@@ -106,15 +106,15 @@
                     </a>
                     <a
                         class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                        href="#"
+                        href="register.html"
                     >
-                        About
+                        Register
                     </a>
                     <a
                         class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg dark:bg-transparent dark:hover:bg-gray-600 dark:focus:bg-gray-600 dark:focus:text-white dark:hover:text-white dark:text-gray-200 md:mt-0 md:ml-4 hover:text-gray-900 focus:text-gray-900 hover:bg-gray-200 dark:text-gray-800 focus:bg-gray-200 focus:outline-none focus:shadow-outline"
-                        href="contact.html"
+                        href="login.html"
                     >
-                        Contact
+                        Login
                     </a>
                     <div @click.away="open = false" class="relative" x-data="{ open: false }">
                         <button
